--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    padding: 1%;
+    /* padding: 1%; */
     font-family: sans-serif;
     color: rgb(214, 244, 243);
 }
@@ -63,7 +63,7 @@
 /* responsive css area  */
 
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 450px) {
     .container {
         /* display: grid; */
         grid-template-columns: 1fr;
